--- a/css/styles.css
+++ b/css/styles.css
@@ -34,6 +34,7 @@ body {
 .nav {
   padding-top: 2em;
   align-items: center;
+  position: relative;
 }
 
 .nav__logo img{
@@ -76,8 +77,6 @@ body {
   transform: scale(1,1)
 }
 
-
-
 .btn {
   display: grid;
   place-items: center;
@@ -96,6 +95,44 @@ body {
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   border: 1px solid var(--col-primary)
+}
+
+.hamburger{
+  display: inline-block;
+  cursor: pointer;
+  position:absolute;
+  right: 0;
+  /* display: none; */
+}
+
+.bar1, 
+.bar2, 
+.bar3 {
+  width: 35px;
+  height: 5px;
+  margin: 6px 0;
+  transition: 0.4s;
+}
+
+.bar1, 
+.bar3 {
+  background-color: var(--col-primary);
+}
+
+.bar2 {
+  background-color: var(--col-secondary);
+}
+
+.change .bar1 {
+  -webkit-transform: rotate(-45deg) translate(-9px, 6px);
+  transform: rotate(-45deg) translate(-9px, 6px);
+}
+
+.change .bar2 {opacity: 0;}
+
+.change .bar3 {
+  -webkit-transform: rotate(45deg) translate(-8px, -8px);
+  transform: rotate(45deg) translate(-8px, -8px);
 }
 
 /* Hero Section */
@@ -443,26 +480,65 @@ body {
 .footer__social__link {
   font-size: 2rem;
   margin: 0 1em;
-  color: var(--col-primary);
-  width: 4rem;
-  height: 4rem;
+  width: 4.5rem;
+  height: 4.5rem;
   text-align: center;
-  border-radius: 50%;
-  border: 2px solid var(--col-primary);
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  border-radius: 30%;
+  box-shadow: 0 10px 30px rgba(0,0,0,0.2);
+  display: grid;
+  place-items: center;
   text-decoration: none;
+  background: #fff;
+  overflow: hidden;
+  position: relative;
 }
 
-.footer__social__link a {
-  color: inherit;
-}
-
-.footer__social__link:hover {
-  background: var(--col-primary);
+.footer__social__link i {
   color: var(--col-secondary);
+  line-height: 4rem;
+  transition: transform linear 0.25s;
 }
+
+.footer__social__link:hover i {
+  transform: scale(1.2);
+  color: #fff;
+}
+
+.footer__social__link::before {
+  content: '';
+  position: absolute;
+  width: 120%;
+  height: 120%;
+  background: var(--col-primary);
+  transform:  rotate(45deg);
+  left: -110%;
+  top: 90%;
+}
+
+.footer__social__link:hover::before {
+  animation: social-effect 0.7s 1;
+  top: -10%;
+  left: -10%;
+}
+
+@keyframes social-effect {
+  0% {
+    left:-110%;
+    top: 90%;
+  }
+  50% {
+    left: 10%;
+    top: -30%;
+  }
+  100% {
+    left:-10%;
+    top: -10%;
+  }
+}
+
+
+
+
 
 .footer__end {
   margin-top: 2em;
