--- a/css/styles.css
+++ b/css/styles.css
@@ -114,9 +114,9 @@ body {
 .bar1, 
 .bar2, 
 .bar3 {
-  width: 35px;
-  height: 5px;
-  margin: 6px 0;
+  width: 2.5rem;
+  height: 0.25rem;
+  margin: 0.3em 0;
   transition: 0.4s;
 }
 
