--- a/css/styles.css
+++ b/css/styles.css
@@ -115,8 +115,8 @@ body {
 .bar2, 
 .bar3 {
   width: 2.5rem;
-  height: 0.25rem;
-  margin: 0.3em 0;
+  height: 0.3rem;
+  margin: 0.6em 0;
   transition: 0.4s;
 }
 
@@ -134,15 +134,15 @@ body {
 }
 
 .change .bar1 {
-  -webkit-transform: rotate(-45deg) translate(-9px, 6px);
-  transform: rotate(-45deg) translate(-9px, 6px);
+  -webkit-transform: rotate(-45deg) translate(-0.64rem, 0.25rem);
+  transform: rotate(-45deg) translate(-0.64rem, 0.25rem);
 }
 
 .change .bar2 {opacity: 0;}
 
 .change .bar3 {
-  -webkit-transform: rotate(45deg) translate(-9px, -8px);
-  transform: rotate(45deg) translate(-9px, -8px);
+  -webkit-transform: rotate(45deg) translate(-1rem, -0.6rem);
+  transform: rotate(45deg) translate(-1rem, -0.6rem);
 }
 
 /* Hero Section */
