--- a/css/styles.css
+++ b/css/styles.css
@@ -38,8 +38,9 @@ body {
 }
 
 .btn {
-  display: -ms-grid;
-  display: grid;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   place-items: center;
   text-decoration: none;
   letter-spacing: 1.2;
@@ -50,6 +51,7 @@ body {
           box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2), 0 0 50px rgba(0, 0, 0, 0.2);
   padding: 0.5em 1.5em;
   border-radius: 3rem;
+  outline: none;
 }
 
 .btn:hover {
@@ -746,8 +748,21 @@ body {
   padding: 5em 0;
 }
 
+.center {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
 .card__contact {
-  padding: 5em;
+  padding: 3em 0;
+  width: 60%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -755,9 +770,9 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -767,11 +782,10 @@ body {
   font-size: 2.2rem;
   width: 75%;
   text-align: center;
+  margin-bottom: 1em;
 }
 
-.form__box {
-  font: "Oxygen", sans-serif;
-  width: 100%;
+form {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -779,28 +793,89 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.form__box {
+  font: "Oxygen", sans-serif;
+  width: 100%;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[2];
+      grid-template-columns: repeat(2, 1fr);
+  -ms-grid-rows: (0.5fr)[7];
+      grid-template-rows: repeat(7, 0.5fr);
+  gap: 1em;
 }
 
 .form__item {
-  margin: 1.5em;
-  -ms-flex-preferred-size: 100%;
-      flex-basis: 100%;
+  position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+}
+
+.single {
+  grid-column: span 1;
+  grid-row: span 1;
+}
+
+.double {
+  grid-column: span 2;
+  grid-row: span 5;
+}
+
+.form__btn {
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  -ms-grid-column-align: center;
+      justify-self: center;
+  margin-top: 1em;
+  width: 35%;
+  grid-column: span 2;
+  grid-row: span 1;
+}
+
+.contact__button {
+  font-size: 1rem;
+  height: 3em;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 100%;
+  text-transform: uppercase;
+  letter-spacing: 0.1rem;
+  font-size: 1.2rem;
+  color: #fff;
+  font-weight: bolder;
+  position: relative;
+  border: none;
 }
 
 .contact__input {
   position: relative;
   font-size: 1.2rem;
   width: 100%;
-  margin: 1em;
   border: none;
   border-radius: 0.25em;
-  padding: 0.5em 1.5em;
+  padding: 0.5em 1em 0;
   background: rgba(255, 255, 255, 0.05);
   -webkit-backdrop-filter: blur(2rem);
           backdrop-filter: blur(2rem);
+  -webkit-box-sizing: content-box;
+          box-sizing: content-box;
 }
 
 .contact__input:focus {
@@ -810,20 +885,16 @@ body {
 
 .input__box {
   position: relative;
-  margin: 0 1em;
-}
-
-.contact__textarea {
-  width: 100%;
-  min-height: 30vh;
 }
 
 .contact__label {
   position: absolute;
   font: "Oxygen", sans-serif;
-  top: 2em;
-  left: 2em;
+  font-size: 1.2rem;
+  top: 0.5em;
+  left: 1.1em;
   color: #001C65;
+  cursor: text;
 }
 
 /* Media Queries */
