--- a/css/_contact.scss
+++ b/css/_contact.scss
@@ -26,7 +26,7 @@
 }
 
 .card__contact {
-    padding: 3em 0;
+    padding: 3em 2em;
     width: 60%;
     display: flex;
     flex-direction: column;
@@ -36,7 +36,7 @@
 
 .contact__title {
     font-size: 2.2rem;
-    width: 75%;
+    width: 90%;
     text-align: center;
     margin-bottom: 1em;
 }
@@ -46,6 +46,10 @@ form {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+
+.form__container {
+    width: 75%;
 }
 
 .form__box {
@@ -113,10 +117,6 @@ form {
         border: solid $col-accent 2px;
         outline: none;
     }
-
-    &:focus .contact__label {
-
-    }
 }
 
 .input__box {
@@ -130,5 +130,13 @@ form {
     top: 0.5em;
     left: 1.1em;
     color: $col-accent;
-    cursor: text;
+    pointer-events: none;
+}
+
+.margin--bottom {
+    margin-bottom: 5em;
+}
+
+.padding--top {
+    padding-top: 8em;
 }
