--- a/css/_mediaQueries.scss
+++ b/css/_mediaQueries.scss
@@ -10,303 +10,406 @@
     }
   } */
 
-
 @media only screen and (max-width: 1280px) {
     html {
         font-size: 14px;
     }
 
-    @media only screen and (max-width: 1280px) {
-        html {
-            font-size: 12px;
-        }
+    .contact_me {
+        width: 75%;
+    }
+}
 
-        .contact_me {
-            width: 75%;
+@media (max-width: 800px) {
+
+    html {
+        font-size: 12px;
+    }
+
+    .nav__logo {
+        img {
+            width: 6rem;
         }
     }
 
-    @media (orientation: portrait) {
+    .nav__list {
+        position: fixed;
+        bottom: 0;
+        right: 0;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        background: linear-gradient(to bottom right, $col-primary, $col-secondary);
+        z-index: 2;
+        height: 100vh;
+        width: 100%;
+        clip-path: circle(50px at 90% -15%);
+        -webkit-clip-path: circle(50px at 90% -15%);
+        transition: all 1s ease-out;
 
-        html {
-            font-size: 18px;
-        }
-
-        .nav__list {
-            position: fixed;
-            bottom: 0;
-            right: 0;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-evenly;
-            background: linear-gradient(to bottom right, $col-primary, $col-secondary);
-            z-index: 2;
-            height: 100vh;
-            width: 100%;
-            clip-path: circle(50px at 90% -10%);
-            -webkit-clip-path: circle(50px at 90% -10%);
-            transition: all 1s ease-out;
-        }
-
-        .nav__link::after {
-            background: #fff;
-        }
-
-        .nav__item {
-            opacity: 0;
-        }
-
-        .nav__item:nth-child(1) {
-            transition: all 0.5s ease 0.2s;
-        }
-
-        .nav__item:nth-child(2) {
-            transition: all 0.5s ease 0.4s;
-        }
-
-        .nav__item:nth-child(3) {
-            transition: all 0.5s ease 0.6s;
-        }
-
-        .nav__item:nth-child(4) {
-            transition: all 0.5s ease 0.8s;
-        }
-
-        .nav__item.fade {
-            opacity: 1;
-        }
-
-        .nav__list.open {
+        &.open {
             clip-path: circle(calc(150vh) at 90% -10%);
             -webkit-clip-path: circle(150vh at 90% -10%);
         }
+    }
 
-        .nav__link {
-            font-size: 2rem;
-            color: #fff;
+
+
+    .nav__item {
+        opacity: 0;
+
+        &:nth-child(1) {
+            transition: all 0.5s ease 0.2s;
         }
 
-        .hamburger {
-            display: inline;
-            position: absolute;
-            top: 50%;
-            right: 10%;
-            transform: translateY(-50%);
-            z-index: 3;
+        &:nth-child(2) {
+            transition: all 0.5s ease 0.4s;
         }
 
-        .hero {
-            min-height: 50vh;
+        &:nth-child(3) {
+            transition: all 0.5s ease 0.6s;
         }
 
-        .hero__title {
-            flex-direction: column;
+        &:nth-child(4) {
+            transition: all 0.5s ease 0.8s;
         }
 
-        .hero__title img {
+        &.fade {
+            opacity: 1;
+        }
+    }
+
+    .nav__link {
+        font-size: 2rem;
+        color: #fff;
+
+        &::after {
+            background: #fff;
+        }
+    }
+
+    .hamburger {
+        display: inline;
+        position: absolute;
+        top: 50%;
+        right: 10%;
+        transform: translateY(-50%);
+        z-index: 3;
+    }
+
+    .hero {
+        min-height: 50vh;
+        padding: 5em 0;
+    }
+
+    .hero__me {
+        font-size: 5rem;
+    }
+
+    .hero__title {
+        flex-direction: column;
+
+        img {
             width: 30%;
             position: relative;
             margin: 0 auto;
             left: 0;
         }
-
-        .hero__greeting h2 {
-            margin-top: 1em;
-        }
-
-        .hero__image {
-            width: 80%;
-        }
-
-        .project {
-            padding-bottom: 0;
-        }
-
-        .row {
-            flex-direction: column;
-            gap: 4em;
-        }
-
-        .project {
-            width: 100%;
-            justify-content: center;
-            align-items: center;
-        }
-
-        .project__link {
-            width: 40%;
-            margin: 0 auto;
-        }
-
-        .project__text {
-            width: 100%;
-            text-align: center;
-        }
-
-        .contact_me {
-            width: 95%;
-            height: none;
-            font-size: 4vw;
-        }
-
-        .contact__btn {
-            flex-basis: 60%;
-            font-size: 3.5vw;
-        }
-
-        .nav.row {
-            flex-direction: row;
-        }
-
-        .footer__me {
-            width: 100%;
-        }
-
-        .footer__social {
-            width: 100%;
-        }
-
     }
 
-    @media (max-width: 720px) {
+    .hero__greeting h2 {
+        margin-top: 1em;
+    }
 
-        html {
-            font-size: 20px;
+    .hero__image {
+        width: 80%;
+    }
+
+    .project {
+        padding-bottom: 0;
+    }
+
+    .row {
+        flex-direction: column;
+        gap: 4em;
+    }
+
+    .project {
+        width: 100%;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .project__link {
+        width: 40%;
+        margin: 0 auto;
+    }
+
+    .project__text {
+        width: 100%;
+        text-align: center;
+    }
+
+    .contact_me {
+        width: 95%;
+        height: none;
+        font-size: 4vw;
+    }
+
+    .contact__btn {
+        flex-basis: 60%;
+        font-size: 3.5vw;
+    }
+
+    .nav.row {
+        flex-direction: row;
+    }
+
+    .footer__me {
+        width: 100%;
+    }
+
+    .footer__social {
+        width: 100%;
+    }
+
+    .card__contact {
+        width: 100%;
+    }
+
+    .contact__title {
+        font-size: 6vw;
+    }
+
+    .form__container {
+        width: 100%;
+    }
+
+    @media (max-width: 767px) {
+        .form__box {
+            grid-template-columns: 1fr;
+            grid-template-rows: repeat(8, 0.5fr);
+            gap: 1em;
         }
 
-        .nav__list {
-            position: fixed;
-            bottom: 0;
-            right: 0;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-evenly;
-            background: linear-gradient(to bottom right, $col-primary, $col-secondary);
-            z-index: 2;
-            height: 100vh;
-            width: 100%;
-            clip-path: circle(50px at 90% -10%);
-            -webkit-clip-path: circle(50px at 90% -10%);
-            transition: all 1s ease-out;
+
+
+
+        .double {
+            grid-column: 1;
         }
 
-        .nav__link::after {
-            background: #fff;
+        .form__btn {
+            grid-column: 1;
+            width: 50%;
         }
+    }
 
-        .nav__item {
-            opacity: 0;
+
+
+    .padding--top {
+        padding-top: 9em;
+    }
+
+}
+
+@media (orientation: portrait) {
+
+    html {
+        font-size: 12px;
+    }
+
+    .nav__logo {
+        img {
+            width: 6rem;
         }
+    }
 
-        .nav__item:nth-child(1) {
-            transition: all 0.5s ease 0.2s;
-        }
+    .nav__list {
+        position: fixed;
+        bottom: 0;
+        right: 0;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        background: linear-gradient(to bottom right, $col-primary, $col-secondary);
+        z-index: 2;
+        height: 100vh;
+        width: 100%;
+        clip-path: circle(50px at 90% -15%);
+        -webkit-clip-path: circle(50px at 90% -15%);
+        transition: all 1s ease-out;
 
-        .nav__item:nth-child(2) {
-            transition: all 0.5s ease 0.4s;
-        }
-
-        .nav__item:nth-child(3) {
-            transition: all 0.5s ease 0.6s;
-        }
-
-        .nav__item:nth-child(4) {
-            transition: all 0.5s ease 0.8s;
-        }
-
-        .nav__item.fade {
-            opacity: 1;
-        }
-
-        .nav__list.open {
+        &.open {
             clip-path: circle(calc(150vh) at 90% -10%);
             -webkit-clip-path: circle(150vh at 90% -10%);
         }
+    }
 
-        .nav__link {
-            font-size: 2rem;
-            color: #fff;
+
+
+    .nav__item {
+        opacity: 0;
+
+        &:nth-child(1) {
+            transition: all 0.5s ease 0.2s;
         }
 
-        .hamburger {
-            display: inline;
-            position: absolute;
-            top: 50%;
-            right: 10%;
-            transform: translateY(-50%);
-            z-index: 3;
+        &:nth-child(2) {
+            transition: all 0.5s ease 0.4s;
         }
 
-        .hero {
-            min-height: 50vh;
+        &:nth-child(3) {
+            transition: all 0.5s ease 0.6s;
         }
 
-        .hero__title {
-            flex-direction: column;
+        &:nth-child(4) {
+            transition: all 0.5s ease 0.8s;
         }
 
-        .hero__title img {
+        &.fade {
+            opacity: 1;
+        }
+    }
+
+    .nav__link {
+        font-size: 2rem;
+        color: #fff;
+
+        &::after {
+            background: #fff;
+        }
+    }
+
+    .hamburger {
+        display: inline;
+        position: absolute;
+        top: 50%;
+        right: 10%;
+        transform: translateY(-50%);
+        z-index: 3;
+    }
+
+    .hero {
+        min-height: 50vh;
+        padding: 5em 0;
+    }
+
+
+
+    .hero__title {
+        flex-direction: column;
+
+        img {
             width: 30%;
             position: relative;
             margin: 0 auto;
             left: 0;
         }
+    }
 
-        .hero__greeting h2 {
-            margin-top: 1em;
+    .hero__greeting h2 {
+        margin-top: 1em;
+    }
+
+    .hero__image {
+        width: 80%;
+    }
+
+    .project {
+        padding-bottom: 0;
+    }
+
+    .row {
+        flex-direction: column;
+        gap: 4em;
+    }
+
+    .project {
+        width: 100%;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .project__link {
+        width: 40%;
+        margin: 0 auto;
+    }
+
+    .project__text {
+        width: 100%;
+        text-align: center;
+    }
+
+    .contact_me {
+        width: 95%;
+        height: none;
+        font-size: 4vw;
+    }
+
+    .contact__btn {
+        flex-basis: 60%;
+        font-size: 3.5vw;
+    }
+
+    .nav.row {
+        flex-direction: row;
+    }
+
+    .footer__me {
+        width: 100%;
+    }
+
+    .footer__social {
+        width: 100%;
+    }
+
+    .card__contact {
+        width: 100%;
+    }
+
+
+
+
+
+    @media (max-width: 767px) {
+        .hero__me {
+            font-size: 5rem;
         }
 
-        .hero__image {
-            width: 80%;
-        }
-
-        .project {
-            padding-bottom: 0;
-        }
-
-        .row {
-            flex-direction: column;
-            gap: 4em;
-        }
-
-        .project {
+        .form__container {
             width: 100%;
-            justify-content: center;
-            align-items: center;
+        }
+    
+    
+        .double {
+            grid-column: 1;
+        }
+    
+        .form__btn {
+            grid-column: 1;
+            width: 50%;
+        }
+    
+        .contact__title {
+            font-size: 6vw;
         }
 
-        .project__link {
-            width: 40%;
-            margin: 0 auto;
+        .form__box {
+            grid-template-columns: 1fr;
+            grid-template-rows: repeat(8, 0.5fr);
+            gap: 1em;
         }
 
-        .project__text {
-            width: 100%;
-            text-align: center;
-        }
-
-        .contact_me {
-            width: 95%;
-            height: none;
-            font-size: 4vw;
-        }
-
-        .contact__btn {
-            flex-basis: 60%;
-            font-size: 3.5vw;
-        }
-
-        .nav.row {
-            flex-direction: row;
-        }
-
-        .footer__me {
-            width: 100%;
-        }
-
-        .footer__social {
-            width: 100%;
-        }
 
     }
+
+   
+
+
+
+    .padding--top {
+        padding-top: 9em;
+    }
+
 }
