--- a/css/_contact.scss
+++ b/css/_contact.scss
@@ -58,7 +58,7 @@ form {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(7, 0.5fr);
-    gap: 1em;
+    gap: 2em;
 }
 
 .form__item {
@@ -116,7 +116,20 @@ form {
     &:focus {
         border: solid $col-accent 2px;
         outline: none;
+        box-shadow: 0 0 20px $col-primary;
     }
+
+    &:focus + .contact__label {
+        font-size: 1rem;
+        transform: translate(0.5em, -1.4em)
+    
+    }
+
+    &:not(:placeholder-shown) +.contact__label{
+        font-size: 1rem;
+        transform: translate(0.5em, -1.4em)
+    }
+    
 }
 
 .input__box {
@@ -124,13 +137,17 @@ form {
 }
 
 .contact__label {
+    color: #fff;
     position: absolute;
-    font: $ff-primary;
     font-size: 1.2rem;
-    top: 0.5em;
-    left: 1.1em;
     color: $col-accent;
     pointer-events: none;
+    transition: all 0.3s ease;
+    transform: translate(1.1em, 0.3em)
+}
+
+.contact__span {
+    color: #fff;
 }
 
 .margin--bottom {
